tests/snapshots/integration__integration_tests__merge__merge_auto_commit_with_llm.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mSquashing 1 commit & working tree changes into a single commit [90m(1 file, [32m+1[39m[39m[90m)[39m...[39m
💡 [2mBackup created @ 967330a[22m
🔄 [36mGenerating squash commit message...[39m
[107m [0m  [1mfix: improve auth validation logic[22m
✅ [32mSquashed @ [2m1e3993e[22m[39m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2m1e3993e[22m (no rebase needed)[39m
[107m [0m  * [33m1e3993e[m fix: improve auth validation logic
[107m [0m   auth.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mmain[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mfeature[22m worktree & branch in background[39m[39m
